Closed
Bug 449749
Opened 17 years ago
Closed 17 years ago
nsWindowWatcher.cpp failed to compile with Sun Studio 12
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
1.49 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
nsWindowWatcher.cpp failed to compile with Sun Studio 12 failed to compile since Aug 1st.
The push is
Patch for bug 112294: calling an alert box from window.onblur triggers the event multiple times
r=smaug
sr=roc
The error is
"../../../../../embedding/components/windowwatcher/src/nsWindowWatcher.cpp", line 689: Error: Ambiguous "?:" expression, second operand of type "nsCOMPtr<nsIWebBrowserChrome>" and third operand of type "int" can be converted to one another.
1 Error(s) detected.
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #332914 -
Flags: superreview?(roc)
Attachment #332914 -
Flags: review?(emaijala)
Updated•17 years ago
|
Attachment #332914 -
Flags: review?(emaijala) → review+
+ parentVisible ? parentChrome
+ : nsCOMPtr<nsIWebBrowserChrome>(nsnull),
It would be cleaner to convert them to the type we really want: nsIWebBrowserChrome*. So use parentChrome.get() and, if necessary, static_cast<nsIWebBrowserChrome*>(nsnull).
Attachment #332914 -
Attachment is obsolete: true
Attachment #333365 -
Flags: superreview?(roc)
Attachment #332914 -
Flags: superreview?(roc)
Attachment #333365 -
Flags: superreview?(roc)
Attachment #333365 -
Flags: superreview+
Attachment #333365 -
Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•