Bug 449749 nsWindowWatcher.cpp failed to compile with Sun Studio 12 r+sr=roc